--- a/app/differentiator.html
+++ b/app/differentiator.html
@@ -450,11 +450,22 @@
                         <img src="assets/images/2ccl.png" class="work__ccl" alt="">
 
                         <div class="work__board">
-                            <img class="work__base" src="assets/images/c-dough.png" alt="">
                             <div>
                                 <div class="work__visual">
-                                    <img class="work__im" src="assets/images/team1.png" alt="">
-
+                                    <div class="work__desc diff__desc">
+                                <h3>We aid business transformation</h3>
+                                <p> 
+                                A part of our value added service is business transformation
+                                 consultation. We examine your business for legacy systems
+                                  and processes. Then identify the best ways to replace 
+                                  those outdated processes and systems with technology that 
+                                  will increase efficiency and productivity.
+                                </p>
+                                </div>
+                                <div>
+                                <img class="work__im" src="assets/images/team1.png" alt="">
+                                <img class="work__base" src="assets/images/c-dough.png" alt="">
+                                </div>
                                 </div>
                             </div>
                             <div class="work__desc diff__desc">
@@ -469,13 +480,11 @@
                                 <br>
                                 Confidence in your product without any disruptions for your investors and business.
                                 </p>
-                                <h3>We aid business transformation</h3>
-                                <p> 
-                                A part of our value added service is business transformation
-                                 consultation. We examine your business for legacy systems
-                                  and processes. Then identify the best ways to replace 
-                                  those outdated processes and systems with technology that 
-                                  will increase efficiency and productivity.
+                                <h3>Business transition support</h3>
+                                <p>
+                                 KJK Africa has the expertise and experience to help non-tech businesses venture into the tech space with ready to market products and services. With 
+                                our dedicated consultants and developers by your side, you can have all the transition 
+                                details handled swiftly, build a technology product and prepare for launch. 
                                 </p>
                             </div>
                             <!-- <div class="work__desc">
@@ -493,20 +502,33 @@
 
                         </div>
                         <div class="work__board">
-                            <img class="work__base" src="assets/images/d-dough.png" alt="">
                             <div>
                                 <div class="work__visual">
                                     <img class="work__im" src="assets/images/team2.png" alt="">
+                                    <img class="work__base" src="assets/images/d-dough.png" alt="">
 
                                 </div>
                             </div>
                             <div class="work__desc diff__desc">
-                                <h3>Business transition support</h3>
-                                <p>
-                                 KJK Africa has the expertise and experience to help non-tech businesses venture into the tech space with ready to market products and services. With 
-                                our dedicated consultants and developers by your side, you can have all the transition 
-                                details handled swiftly, build a technology product and prepare for launch. 
-                                </p>
+                                <div class="diff__desc">
+                                    <h2 class="title diff__title--nopad">
+                                        Why should you hire us?
+                                    </h2>
+                                    <h5>
+                                    Besides the fact that over 100 businesses trust us to deliver spectacular products/services, here are a few significant reasons why you should collaborate with us.
+                                    </h5>
+                                    <p>
+                                     <span>Ease of business</span> - It’s easy to do business with us. We provide structure and competence, but no red tape.
+                                    <br>
+                                    <span>Minimal Risk</span> - We reduce risk while ensuring the highest level of information and system security.
+                                    <br>
+                                     <span>Competence</span> - You’ll hire a dedicated team of software engineers and branding experts with a deep level of experience and business acumen.
+                                    <br>
+                                    <span>	Collaboration</span> - Teamwork is always better. We encourage it by listening and valuing our customers’ ideas.
+                                    <br>
+                                    <span>Successful Experience</span> - We understand what it takes to create products that attract investors. We’ve helped our clients build products that have secured contracts of up to $2 million.
+                                    </p>
+                                </div>
                             </div>
                             <!-- <div class="work__desc">
                                 <h2 class="title">
