--- a/app/blog.html
+++ b/app/blog.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </div> -->
-            <div class="nav-bar">
+            <div class="nav-bar" style="background: black;">
                 <div class="nav-bar__container row">
                     <a href="index.html" class="nav-bar__logo-link">
                         <img src="assets/images/kjk-white.png" alt="logo" class="nav-bar__logo">
@@ -454,18 +454,26 @@
                 <div class="blog__left">
                     <div>
                         <div>
-                            <img src="assets/images/blog1.png" alt="">
+                            <img src="assets/images/blogpic.png" alt="">
                         </div>
                         <div class="blog__desc">
-                        <p>Blog Post</p>
-                        <h1 class="blog__title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium doloribus
-                             nemo voluptates, rerum consequatur in, optio odio debitis doloremque est magni 
+                        <p class="blog__sub">Blog Post</p>
+                        <p class="blog__date">
+                            14th April 2020
+                        </p>
+                        <h1 class="blog__title">
+                            DT: Digital Transformation Guide
                         </h1>
+                        <p class="blog__author">Written by Abiola Akinwoleola</p>
                         <p class="blog__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, possimus debitis. Illo, sequi non? Aliquam eius atque porro! 
-                            Optio similique harum quam sint ipsam aperiam quasi ut culpa. Molestias, autem.
+                            
+                            “Change” is said to be the one factor that remains constant, however, 
+                            the rate at which digital technology keeps changing progressively is quite
+                             the task to keep up with it. Since technology is innovation itself and its use, 
+                             a driver for innovative implementations; organizations have turned to technology to lead the change in optimizing their endeavor to create solutions. This led to the birth of digital transformation.
                         </p>
                         <a href="#" class="diff__button btn btn--link btn--primary btn--upper-space  btn--hover" >
+                            READ STORY
                         </a>
                         </div>
 
@@ -475,12 +483,22 @@
                     <div>
                         <div class="blog__column--item">
                             <div>
-                                <a href="">
+                                <a href="blog-story.html">
                                     <img src="assets/images/blog2.png" alt="">
                                 </a>
                             </div>
                             <div>
                                 <p>Blog Post</p>
+                                <p class="blog__date">
+                                    14th April 2020
+                                </p>
+                                <!-- <h1 class="blog__title">
+                                    DT: Digital Transformation Guide
+                                </h1> -->
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                </p>
+                                <p class="blog__author">Written by Abiola Akinwoleola</p>
                                 <a class="blog__cta" href="">
                                    <span>
                                     Read Story
@@ -490,14 +508,14 @@
                         </div>
                         <div class="blog__column--item">
                             <div>
-                                <a href="">
+                                <a href="blog-story.html">
                                     <img src="assets/images/blog3.png" alt="">
                                 </a>
                             </div>
                             <div>
                                 <p>Blog Post</p>
                                 
-                                <a class="blog__cta" href="">
+                                <a class="blog__cta" href="blog-story.html">
                                     <span>
                                         Read Story
                                     </span> 
@@ -506,13 +524,13 @@
                         </div>
                         <div class="blog__column--item">
                             <div>
-                                <a href="">
+                                <a href="blog-story.html">
                                     <img src="assets/images/blog4.png" alt="">
                                 </a>
                             </div>
                             <div>
                                 <p>Blog Post</p>
-                                <a class="blog__cta" href="">
+                                <a class="blog__cta" href="blog-story.html">
                                     <span>
                                         Read Story
                                     </span> 
