blog page update

--- a/app/blog-story.html
+++ b/app/blog-story.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        kjk
+        Read A Story
     </title>
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -452,7 +452,7 @@
         <div style="padding-top: 100px;">
             <div class="blog__story">
                 <div class="blog__story--hero">
-                <h1 class="blog__title">
+                <h1 class="">
                     DT: Digital Transformation Guide 
                 </h1>
                 <p class="blog__author"> 
