--- a/app/blog.html
+++ b/app/blog.html
@@ -465,7 +465,7 @@
                             DT: Digital Transformation Guide
                         </h1>
                         <p class="blog__author">Written by Abiola Akinwoleola</p>
-                        <p class="blog__text">
+                        <p class="blog__text--long">
                             
                             “Change” is said to be the one factor that remains constant, however, 
                             the rate at which digital technology keeps changing progressively is quite
