--- a/app/quote.html
+++ b/app/quote.html
@@ -426,7 +426,7 @@
                         <p class="quote__text">
                             Before we start your project, we set up a meeting to find out your needs 
                             and vision of the final project. Afterward, we put our best minds to 
-                            creating your product
+                            creating your product.
                         </p>
                     </div>
                     <div class="quote__list-container">
