--- a/app/recognition.html
+++ b/app/recognition.html
@@ -147,8 +147,8 @@
                             </a>
                             <div class="mobile-nav__list active mobile-nav--resp">
                                 <div class="mobile-nav__list-item">
-                                    <a href="services.html" class="mobile-nav__title">
-                                        Web:
+                                    <a href="services.html" class="mobile-nav__title xheight">
+                                        Web :
                                     </a>
                                     <div class="mobile-nav__sub">
                                         <a href="services.html" class="mobile-nav__list-item-link">UI/UX</a>
@@ -297,6 +297,11 @@
                             <div class="mobile-nav__list mobile-nav--resp">
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header">
                                     <a href="solutions.html" class="mobile-nav__title">
+                                        Industries
+                                    </a>
+                                </div>
+                                <div class="mobile-nav__list-item mobile-nav__list-item--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
                                         Fin Tech
                                     </a>
                                 </div>
@@ -318,7 +323,7 @@
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small ">
-                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot" >
                                         Real Estate
 
                                     </a>
@@ -333,11 +338,7 @@
                                         Retail and e-Commerce
                                     </a>
                                 </div>
-                                <div class="mobile-nav__list-item mobile-nav__list-item--small ">
-                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
-                                        Industries
-                                    </a>
-                                </div>
+                                
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small ">
                                     <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
                                         Travel and Tourism
@@ -391,18 +392,18 @@
                                         Connect with us
                                     </a>
                                 </div>
-                                <div class="mobile-nav__list-item mobile-nav__list-item--small mobile-nav__list-item--adjusted">
-                                    <a href="https://www.facebook.com/kjkcomng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/fb-white.svg" style="width: 7px" class="mobile-nav__social-img" alt="">
+                                <div class="mobile-nav__list-item mobile-nav__list-item--small mobile-nav__list-item--adjusted" style="display: flex;align-items: baseline;">
+                                    <a href="https://www.facebook.com/kjkafrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <img src="assets/images/facebook-gradient.png" class="mobile-nav__social-img facebook" alt="">
                                     </a>
-                                    <a href="https://www.linkedin.com/company/kjk-com-ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/linkedin-white.svg" class="mobile-nav__social-img" alt="">
+                                    <a href="https://www.linkedin.com/company/kjkafrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <img src="assets/images/linkedin-gradient.png" class="mobile-nav__social-img" alt="">
                                     </a>
-                                    <a href="https://instagram.com/kjk.com.ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/ins-white.svg" class="mobile-nav__social-img" alt="">
+                                    <a href="https://instagram.com/kjkafrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <img src="assets/images/instagram-gradient.png" class="mobile-nav__social-img" alt="">
                                     </a>
                                     <a href="https://twitter.com/KJKAfrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/twitter-white.svg" class="mobile-nav__social-img " alt=" ">
+                                        <img src="assets/images/twitter-gradient.png" class="mobile-nav__social-img " alt=" ">
                                     </a>
                                 </div>
 
@@ -851,10 +852,11 @@
                         <a href="index.html" class="footer__link footer__link--resp">
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
+                        <div class="footer__link--container">
                         <a href="about.html" class="footer__link ">
                             Who we are
                         </a>
-                        <a href="work.html" class="footer__link ">
+                        <a href="how-we-work.html" class="footer__link ">
                             How we work
                         </a>
                         <a href="services.html" class="footer__link ">
@@ -869,13 +871,14 @@
                         <a href="blog.html" class="footer__link xpad">
                             Blog
                         </a>
+                        </div>
                     </div>
                     <div class="footer__lower-right">
                         <div>
                         <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
                             <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
+                        <a href="https://instagram.com/kjkafrica/" target="_blank" class="">
                             <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
                         <a href="https://twitter.com/KJKAfrica" class="" target="_blank">
