--- a/app/index.html
+++ b/app/index.html
@@ -132,8 +132,8 @@
                             </a>
                             <div class="mobile-nav__list active mobile-nav--resp">
                                 <div class="mobile-nav__list-item">
-                                    <a href="services.html" class="mobile-nav__title">
-                                        Web:
+                                    <a href="services.html" class="mobile-nav__title xheight">
+                                        Web :
                                     </a>
                                     <div class="mobile-nav__sub">
                                         <a href="services.html" class="mobile-nav__list-item-link">UI/UX</a>
@@ -323,11 +323,7 @@
                                         Retail and e-Commerce
                                     </a>
                                 </div>
-                                <div class="mobile-nav__list-item mobile-nav__list-item--small ">
-                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
-                                        Industries
-                                    </a>
-                                </div>
+                               
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small ">
                                     <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
                                         Travel and Tourism
@@ -381,14 +377,14 @@
                                         Connect with us
                                     </a>
                                 </div>
-                                <div class="mobile-nav__list-item mobile-nav__list-item--small mobile-nav__list-item--adjusted">
-                                    <a href="https://www.facebook.com/kjkcomng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/facebook-gradient.png" style="width: 9px" class="mobile-nav__social-img" alt="">
+                                <div class="mobile-nav__list-item mobile-nav__list-item--small mobile-nav__list-item--adjusted" style="display: flex;align-items: baseline;">
+                                    <a href="https://www.facebook.com/kjkafrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <img src="assets/images/facebook-gradient.png" class="mobile-nav__social-img facebook" alt="">
                                     </a>
-                                    <a href="https://www.linkedin.com/company/kjk-com-ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="https://www.linkedin.com/company/kjkafrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                         <img src="assets/images/linkedin-gradient.png" class="mobile-nav__social-img" alt="">
                                     </a>
-                                    <a href="https://instagram.com/kjk.com.ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                    <a href="https://instagram.com/kjkafrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                         <img src="assets/images/instagram-gradient.png" class="mobile-nav__social-img" alt="">
                                     </a>
                                     <a href="https://twitter.com/KJKAfrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
@@ -1089,10 +1085,11 @@
                         <a href="index.html" class="footer__link footer__link--resp">
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
+                        <div class="footer__link--container">
                         <a href="about.html" class="footer__link ">
                             Who we are
                         </a>
-                        <a href="work.html" class="footer__link ">
+                        <a href="how-we-work.html" class="footer__link ">
                             How we work
                         </a>
                         <a href="services.html" class="footer__link ">
@@ -1107,13 +1104,14 @@
                         <a href="blog.html" class="footer__link xpad">
                             Blog
                         </a>
+                        </div>
                     </div>
                     <div class="footer__lower-right">
                         <div>
                         <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
                             <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
+                        <a href="https://instagram.com/kjkafrica/" target="_blank" class="">
                             <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
                         <a href="https://twitter.com/KJKAfrica" class="" target="_blank">
