--- a/app/differentiator.html
+++ b/app/differentiator.html
@@ -463,8 +463,8 @@
                                   will increase efficiency and productivity.
                                 </p>
                                 </div>
-                                <div>
-                                <img class="work__im" src="assets/images/team1.png" alt="">
+                                <div class="work__img--cont">
+                                <img class="work__im" src="assets/images/jumoke6.png" alt="">
                                 <img class="work__base" src="assets/images/c-dough.png" alt="">
                                 </div>
                                 </div>
