--- a/app/geek-capital.html
+++ b/app/geek-capital.html
@@ -428,11 +428,11 @@
         </div>
     </header>
 
-    <section class="work">
+    <section class="geek">
         <img src="assets/images/rect-orange.png" class="work__bg" alt="">
         <img src="assets/images/E1.png" class="work__ellipse" alt="">
         <img src="assets/images/Polygon 40.png" class="work__poly" alt="">
-        <div class="geek__row row">
+        <div class="geek__row">
             <h1 class="work__title">
                 A perfect mash-up of
                 <br class="work__break"> Work, Pray, Play 
@@ -441,7 +441,7 @@
                 <div>
                     <img src="assets/images/geek1.png" alt="">
                 </div>
-                <div>
+                <div class="geek__text">
                     <p>
                         At KJK, our talents are our greatest assets, and that is why
                      
@@ -451,8 +451,8 @@
                         and then everyone goes to setup his or her space for work.
                         It is not uncommon to hear banters every now and then,
                         as we like operate an open office system. At KJK Africa,
-                        our work culture is influenced by these principles: Competence,
-                        Creativity, Structure, and Growth. The excellence of our service
+                        our work culture is influenced by these principles: <span>Competence</span>,
+                        <span> Creativity</span>, <span> Structure </span>, and <span> Growth </span>. The excellence of our service
                         is the motivation and dedication of our people to offer our customers
                         the best service.
                         We would love to give you the same devotion and service.
@@ -489,8 +489,14 @@
                     <img src="assets/images/geek5.png" alt="">
                 </div>
                 <div class="geek__item">
+                    <img src="assets/images/geek7.png" alt="">
+                </div>
+                <div class="geek__item">
+                    <img src="assets/images/geek8.png" alt="">
+                </div>
+                <div class="geek__item">
                     <!-- <img src="assets/images/geek5.png" alt=""> -->
-                    <div>
+                    <div class="geek__activity">
                         <h3 class="geek__title title">Corporate Social Responsibility</h3>
                         <p>
                             At KJK, our Corporate Social Responsibilities are mentorship and free web development service to NGO’s. Every quarter, we organize free classes to teach selected students in-demand web development programmes.
