--- a/app/services.html
+++ b/app/services.html
@@ -527,7 +527,8 @@ gtag('config', 'UA-159861942-1');
         <div class="services__container row">
             <div class="services__container__img services__container__img--space-added">
                 <div class="services__img">
-                    <img src="assets/images/mobilebg.jpg" alt="" class="services__img__inner-one services__img__inner-one--shift">
+                    <img src="assets/images/grey2.jpg" alt="" class="services__img__inner-one services__img__inner-one--shift">
+                    <!-- <img src="assets/images/mobilebg.jpg" alt="" class="services__img__inner-one services__img__inner-one--shift"> -->
                     <img style="z-index: 1;" src="assets/images/afiaanyi-screen.png" alt="" class="services__img__inner-two services__img--resize">
                     <img style="z-index: 0;right: 43%;width: 45%;" src="assets/images/mobile.png" alt="" class="services__img__inner-two services__img--resize">
                     <!-- <img src="assets/images/Mockup4.png" alt="" class="services__img__inner-two services__img__inner-two--mobile"> -->
@@ -618,8 +619,8 @@ gtag('config', 'UA-159861942-1');
             </div>
             <div class="services__container__img">
                 <div class="services__img">
-                    <img src="assets/images/branding.jpg" alt="" class="services__img__inner-one services__img__inner-one--floated">
-                    <img src="assets/images/tru-custom.png" alt="" class="services__img__inner-two services__img__inner-two--left">
+                    <img src="assets/images/corporatebg.png" alt="" class="services__img__inner-one services__img__inner-one--floated">
+                    <img src="assets/images/corporateimg.png" alt="" class="services__img__inner-two services__img__inner-two--left">
                 </div>
             </div>
             
