--- a/app/geek-capital.html
+++ b/app/geek-capital.html
@@ -75,7 +75,7 @@
                     Geek Capital
                 </h1>
                 <p class="header__text header__text--services">
-                    We Make Cutting-Edge Web, Mobile &amp; Enterprise Solutions
+                    #KJKSocials #KJKMoments
                     
                 </p>
 
