--- a/app/team.html
+++ b/app/team.html
@@ -819,7 +819,7 @@
                                     <h3 class="">Olalekan Oladele</h3>
                                 </div>
                                 <p class="team__role">
-                                    CTO(Chief Executive Officer), KJK Africa
+                                    CTO (Chief Technology Officer), KJK Africa
                                 </p>
                                 <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
